   during the Dial will be set to the argument passed to the 'f' option.
 * Dial now inherits the GOSUB_RETVAL from the peer, when the U() option runs a
   Gosub on the peer.
 * The OSP lookup application adds in/outbound network ID, optional security,
   number portability, QoS reporting, destination IP port, custom info and service
   type features.

Dialplan Functions
------------------
 * Added new dialplan functions CONNECTEDLINE and REDIRECTING which permits
   setting various connected line and redirecting party information.
 * CALLERID and CONNECTEDLINE dialplan functions have been extended to
   support ISDN subaddressing.
 * The CHANNEL() function now supports the "name" option.
 * For DAHDI channels, the CHANNEL() dialplan function now
   supports changing the channel's buffer policy (for the current
   call only), using this syntax:

   exten => s,n,Set(CHANNEL(buffers)=6,full)

   This would change the channel to the 'full' buffer policy and
   6 (six) buffers. Possible options for this setting are the same
   as those in chan_dahdi.conf.
 * For DAHDI channels, the CHANNEL() dialplan function now allows
   the dialplan to request changes in the configuration of the active
   echo canceller on the channel (if any), for the current call only.
   The syntax is:

   exten => s,n,Set(CHANNEL(echocan_mode)=off)

   The possible values are:

     on - normal mode (the echo canceller is actually reinitialized)
     off - disabled
     fax - FAX/data mode (NLP disabled if possible, otherwise completely
           disabled)
     voice - voice mode (returns from FAX mode, reverting the changes that
             were made when FAX mode was requested)
 * Added new dialplan function MASTER_CHANNEL(), which permits retrieving
   and setting variables on the channel which created the current channel.
   Administrators should take care to avoid naming conflicts, when multiple
   channels are dialled at once, especially when used with the Local channel